# profilex

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md
.github/: release-template.md
.github/workflows/: release.yml
docs/: release-install.md
examples/sample_target/: CMakeLists.txt  README.md
examples/sample_target/src/: main.cpp
scripts/: build_release_artifact.sh  clean_release_validate.sh  deep_stress_test.sh  demo.sh  example_target_demo.sh  install_from_package.sh  install_from_source.sh  storage_corruption_demo.sh  stress_test.sh
src/: main.cpp
src/cli/: application.cpp  application.hpp  command_parser.cpp  command_parser.hpp
src/model/: types.cpp  types.hpp
src/report/: printer.cpp  printer.hpp
src/runner/: command_runner.cpp  command_runner.hpp
src/stats/: stats_engine.cpp  stats_engine.hpp
src/storage/: json_codec.cpp  json_codec.hpp  run_repository.cpp  run_repository.hpp
tests/: cli_tests.cpp  runner_tests.cpp  stats_tests.cpp  storage_tests.cpp
